Fix browser actions container snapping during drag.

Logic for max size is now consistent with animation/dragging.
Animation correctly plays if drag does not end at exact size.

This is not a complete fix for extensions dragging.

Bug: 916209
Change-Id: Iccb0d11bbe540a16edec0720105d272e091cf43d
Reviewed-on: https://chromium-review.googlesource.com/c/1492049
Commit-Queue: Dana Fried <dfried@chromium.org>
Reviewed-by: Dana Fried <dfried@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#636653}
Former-commit-id: c9a56a176ba1dfa89bf1d8b22933bc253eab7195